<resources>
    <string name="app_name">BluetoothConn</string>
    <string name="search_to_pair_device">Search to pair device</string>
    <string name="connect">Connect</string>
    <string name="info">Info</string>
    <string name="disconnect">Disconnect</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_led_colors">Change LED COLORS</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="dht11">DHT11</string>
    <string name="fc28">FC28</string>
    <string name="fc37">FC37</string>
    <string name="status">Check Status</string>
    <string name="activity2_name">Info Activity</string>
</resources>
